# OLD-SYNAPTECH-FRAMEWORK

./: LICENSE-COMMERCIAL.md  LICENSE-COMMUNITY.md  LICENSE.md  README.md
EVE/: README.md  config.py  eve_suite_pyside6.py  requirements.txt  run_eve.desktop
Flywirellm/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  flywire_lsm_text.py  pyproject.toml
Flywirellm/flywire_lsm/: config.py  logging.py  readout.py  server.py  text_encoder.py
Flywirellm/frontend/: index.html
Flywirellm/scripts/: train.py
Flywirellm/tests/: test_readout.py  test_simulation.py
Project-FreeGen/: CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  vcpkg.json
Project-FreeGen/cmake/: CompilerWarnings.cmake  Sanitizers.cmake  ShaderCompilation.cmake
Project-FreeGen/docs/: Doxyfile  architecture.md  build.md  capture-backends.md  configuration.md  contributing.md  effects.md  index.md  packaging.md  pipeline.md
Project-FreeGen/flatpak/: io.github.freegen.yml
Project-FreeGen/include/freegen/: version.hpp
Project-FreeGen/include/freegen/capture/: DXGICaptureBackend.hpp  ICaptureBackend.hpp  LinuxCaptureBackend.hpp
Project-FreeGen/include/freegen/config/: CliParser.hpp  ConfigManager.hpp  ProfileManager.hpp
Project-FreeGen/include/freegen/core/: CommandPool.hpp  Device.hpp  Instance.hpp  ShaderModule.hpp  Swapchain.hpp
Project-FreeGen/include/freegen/effects/: EffectManager.hpp  FSR1.hpp  FrameGenInterpolate.hpp  IEffect.hpp  IntegerScale.hpp
Project-FreeGen/include/freegen/render/: Compositor.hpp  ComputePipeline.hpp  GraphicsPipeline.hpp  TextureManager.hpp
Project-FreeGen/include/freegen/ui/: ImGuiHandler.hpp  SettingsWindow.hpp
Project-FreeGen/include/freegen/util/: Logger.hpp  Platform.hpp  Result.hpp
Project-FreeGen/scripts/: build-appimage.sh  build-flatpak.sh  manage.sh
Project-FreeGen/shaders/: frame_interpolate.comp  fsr_easu.comp  fsr_rcas.comp  fullscreen.vert  integer_scale.comp  passthrough.comp  texture.frag
Project-FreeGen/src/: CMakeLists.txt  main.cpp
Project-FreeGen/src/libfreegen/: CMakeLists.txt
Project-FreeGen/src/libfreegen/capture/: DXGICaptureBackend.cpp  LinuxCaptureBackend.cpp
Project-FreeGen/src/libfreegen/config/: CliParser.cpp  ConfigManager.cpp  ProfileManager.cpp
Project-FreeGen/src/libfreegen/core/: CommandPool.cpp  Device.cpp  Instance.cpp  ShaderModule.cpp  Swapchain.cpp
Project-FreeGen/src/libfreegen/effects/: EffectManager.cpp  FSR1.cpp  FrameGenInterpolate.cpp  IntegerScale.cpp
Project-FreeGen/src/libfreegen/render/: Compositor.cpp  ComputePipeline.cpp  GraphicsPipeline.cpp  TextureManager.cpp
Project-FreeGen/src/libfreegen/ui/: ImGuiHandler.cpp  SettingsWindow.cpp
Project-FreeGen/src/libfreegen/util/: Logger.cpp  Platform.cpp
Project-FreeGen/src/tests/: CMakeLists.txt  test_compute_pipeline.cpp  test_config.cpp  test_effects.cpp
Ruffel/: ARCHITECTURE.md  ARCHLINUX.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SETUP.md  get-openmono.sh  openmono  ruffel-mono-agent.sh
SynapTechBio/: CHANGELOG.md  CODE_OF_CONDUCT.md  COMPANY_OVERVIEW.md  CONTRIBUTING.md  CURRENT_STATE.md  ETHICS_AND_SAFETY.md  GOALS_AND_ROADMAP.md  HOW_YOU_CAN_HELP.md  MANIFEST.md  MARKETING_AND_OUTREACH.md  README.md  SECURITY.md  SYNAPTECHBIO_COMPLETE_REFERENCE.md  SYNAPTECHBIO_CRITIQUE_AND_CORRECTIONS.md
TurboLLama/: README.md
arch-desktop-setup/: PROJECT_DOCS.md  README.md  finish_setup.sh  install.sh
dak/: ArchitectureofErebus.md  CONTRIBUTING.md  LICENSE  README.md  USF_MATHEMATICAL_FOUNDATIONS.md  Unified_ToE_Paper.tex  pyproject.toml
dak/dak/: __init__.py  main.py  requirements.txt
dak/dak/agency/: __init__.py  code_validator.py  network.py  safety_sentinel.py  sandbox.py  workspace.py
dak/dak/config/: settings.py
dak/dak/inference/: __init__.py  free_energy.py  gradient_descent.py  markov_blanket.py  model.py
dak/dak/interact/: api.py  chat.py  repl.py  tui.py
dak/dak/memory/: __init__.py  chat_memory.py  core_beliefs.py  episodic_buffer.py  episodic_retriever.py
dak/dak/metabolism/: __init__.py  landauer.py  szilard.py
dak/dak/relational/: __init__.py  empathy.py  protocols.py
dak/dak/safety/: __init__.py  audit.py  constitution.py  constraints.py  measurer.py  monitor.py
dak/dak/substrate/: __init__.py  memory.py  telemetry.py
dak/dak/temporal/: __init__.py  dqfr.py  gwfr.py
dak/dak/tests/: test_agency.py  test_dqfr.py  test_free_energy.py  test_integration.py  test_markov_blanket.py  test_memory.py  test_model_expanded.py  test_safety.py  test_szilard.py  test_usf.py  test_usf_phase2.py
dak/dak/usf/: __init__.py  attention.py  checkpoint.py  complex.py  config.py  lee_wick.py  markov_blanket.py  normalization.py  optimizer.py  tokenizer.py  transformer.py
dak/dak/utils/: logger.py
digidollar/: CHANGELOG.md  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac  libdigidollarconsensus.pc.in
flywire-realtime-engine/: README.md  flybrain_activity.py
samchat/: AGENTS.md  CHANGELOG.md  LICENSE  PROJECT.md  README.md  opencode.jsonc  pubspec.yaml  rebuild.sh
synaptech-idre/: CODE_OF_CONDUCT.md  PROJECT_CONTEXT.md  README.md  requirements.gpu.txt  requirements.txt  run.py
synaptech-platform/: ARCHITECTURE.md  CONTRIBUTING.md  COSMOS.md  HOW_YOU_CAN_HELP.md  LICENSE  MONOREPO_MAP.md  README.md
the-unified-blueprint/: CONTRIBUTING.md  LICENSE  (+3 more)
(+314 files in other folders)
